:rocket: First commit

--- a/css/default.css
+++ b/css/default.css
@@ -28,3 +28,17 @@ body {
 .space-between {
   justify-content: space-between;
 }
+
+.relative {
+  position: relative;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
